// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gamedata verify environment should record the reports as readable documents 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "verify",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "cache": {
      "bytes": 1988,
      "entries": 8,
      "hits": 7,
      "misses": 8,
      "refused": 0,
    },
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "Every declared source opened",
        "verificationType": "coverage",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "No unreachable files",
        "verificationType": "collisions",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "passed",
        "summary": "7/7 environment configs valid",
        "verificationType": "environment",
      },
    ],
    "duration": "<duration>",
    "skippedMounts": [],
    "status": "passed",
  },
}
`;

exports[`gamedata verify environment should record the reports as readable documents 2`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "verify",
  ],
  "duration": "<duration>",
  "error": "Check failed: 1 finding(s)",
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 3,
  "outcome": "checkFailed",
  "result": {
    "cache": {
      "bytes": 1992,
      "entries": 8,
      "hits": 7,
      "misses": 8,
      "refused": 0,
    },
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "Every declared source opened",
        "verificationType": "coverage",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "No unreachable files",
        "verificationType": "collisions",
      },
      {
        "duration": "<duration>",
        "findings": [
          {
            "assetPath": "configs/environment/weathers/test.ltx",
            "message": "Weather [00:00:00] references missing ambient [absent_ambient]",
            "ruleId": "environment.reference",
          },
        ],
        "status": "failed",
        "summary": "6/7 environment configs valid",
        "verificationType": "environment",
      },
    ],
    "duration": "<duration>",
    "skippedMounts": [],
    "status": "failed",
  },
}
`;

exports[`gamedata verify environment should record the reports as readable documents 3`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "verify",
  ],
  "duration": "<duration>",
  "error": "Check failed: 2 finding(s)",
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 3,
  "outcome": "checkFailed",
  "result": {
    "cache": {
      "bytes": 1988,
      "entries": 8,
      "hits": 7,
      "misses": 8,
      "refused": 0,
    },
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "Every declared source opened",
        "verificationType": "coverage",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "status": "skipped",
        "summary": "No unreachable files",
        "verificationType": "collisions",
      },
      {
        "duration": "<duration>",
        "findings": [
          {
            "assetPath": "configs/environment/ambients.ltx",
            "message": "Ambient [ambient_ok] is missing required field [effects]",
            "ruleId": "environment.engine",
          },
          {
            "assetPath": "configs/environment/sun_positions.ltx",
            "message": "There is no environment\\sun_positions.ltx, which the engine stands the sun by",
            "ruleId": "environment.engine",
          },
        ],
        "status": "failed",
        "summary": "6/8 environment configs valid",
        "verificationType": "environment",
      },
    ],
    "duration": "<duration>",
    "skippedMounts": [],
    "status": "failed",
  },
}
`;

exports[`gamedata verify environment should write the expected reports and files 1`] = `
[
  {
    "path": "broken.json",
    "sha256": "b180beb6b8d7ad7cda9e863d10c67430ea5fc91b501ef6cf227a2833d46a7829",
    "size": 1587,
  },
  {
    "path": "broken/configs/environment/ambients.ltx",
    "sha256": "ed55eee5009d835ff1e4838fbb1f08d047b630f4f2a02c39c187ec0931befee8",
    "size": 87,
  },
  {
    "path": "broken/configs/environment/environment.ltx",
    "sha256": "64e87e33e7c35eaaa00c1c2335e6d8a1e1e454af1e46165ba0081c5b81fc6037",
    "size": 155,
  },
  {
    "path": "broken/configs/environment/sound_channels.ltx",
    "sha256": "3fdc215fc0b72322668f00f726692d58979c77d147e3cb0572321dd65e1bb84a",
    "size": 136,
  },
  {
    "path": "broken/configs/environment/suns.ltx",
    "sha256": "640d55f8afe6d01733d9e705107b819a9e6a303e066933a30aaf4685c77b5e45",
    "size": 89,
  },
  {
    "path": "broken/configs/environment/thunderbolt_collections.ltx",
    "sha256": "5ccb749d9c808517df1104c701ca5ea328ebe2046cd069436428c0feed0797c8",
    "size": 17,
  },
  {
    "path": "broken/configs/environment/thunderbolts.ltx",
    "sha256": "0fe93c20461051bb6114564aca47eae1353ad96012bcb90b9fbcc82bd0f961ad",
    "size": 404,
  },
  {
    "path": "broken/configs/environment/weathers/test.ltx",
    "sha256": "6d34a2c38b03622b491421045982f849df12b26ecad413066ad76a9a29595328",
    "size": 1104,
  },
  {
    "path": "broken/configs/system.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "broken/textures/sky/clouds.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "broken/textures/sky/first#small.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "broken/textures/sky/first.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "broken/textures/sky/second#small.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "broken/textures/sky/second.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "extended.json",
    "sha256": "54389b0dcc027de781ed04a2fd308896e8eea719b9a973c741c57d8aef55fa24",
    "size": 1812,
  },
  {
    "path": "valid.json",
    "sha256": "052a03f15e492a82af95883bd89b76f6e5c49d4316311a3d1449a17d225c78db",
    "size": 1325,
  },
  {
    "path": "valid/configs/environment/ambients.ltx",
    "sha256": "ed55eee5009d835ff1e4838fbb1f08d047b630f4f2a02c39c187ec0931befee8",
    "size": 87,
  },
  {
    "path": "valid/configs/environment/environment.ltx",
    "sha256": "64e87e33e7c35eaaa00c1c2335e6d8a1e1e454af1e46165ba0081c5b81fc6037",
    "size": 155,
  },
  {
    "path": "valid/configs/environment/sound_channels.ltx",
    "sha256": "3fdc215fc0b72322668f00f726692d58979c77d147e3cb0572321dd65e1bb84a",
    "size": 136,
  },
  {
    "path": "valid/configs/environment/suns.ltx",
    "sha256": "640d55f8afe6d01733d9e705107b819a9e6a303e066933a30aaf4685c77b5e45",
    "size": 89,
  },
  {
    "path": "valid/configs/environment/thunderbolt_collections.ltx",
    "sha256": "5ccb749d9c808517df1104c701ca5ea328ebe2046cd069436428c0feed0797c8",
    "size": 17,
  },
  {
    "path": "valid/configs/environment/thunderbolts.ltx",
    "sha256": "0fe93c20461051bb6114564aca47eae1353ad96012bcb90b9fbcc82bd0f961ad",
    "size": 404,
  },
  {
    "path": "valid/configs/environment/weathers/test.ltx",
    "sha256": "67f23b0f109d33e88730410154798da540745d35344193ecb297f063b1341d44",
    "size": 1100,
  },
  {
    "path": "valid/configs/system.ltx",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "size": 0,
  },
  {
    "path": "valid/textures/sky/clouds.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "valid/textures/sky/first#small.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "valid/textures/sky/first.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "valid/textures/sky/second#small.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
  {
    "path": "valid/textures/sky/second.dds",
    "sha256": "3c353eaac54b08b29f50c8f2fb7bf68ef3d2b103c1a7ad9334fd4cb862e02e13",
    "size": 144,
  },
]
`;
